# esphome-aeg-ac-control

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  example.yml
.github/workflows/: test.yml
components/aeg_ac/: aeg_ac.cpp  aeg_ac.hpp  aeg_ir.cpp  aeg_ir.hpp  climate.py
test/: auto_test.cpp  dry_test.cpp  fan_test.cpp  generic_test.cpp  test_util.hpp
